@@ -1,0 +1,6 @@
+<script type="text/javascript" charset="utf-8">
+    var $ = function() { console.log("OK") };
+</script>
+
+<p>Test for <a href="https://bugs.webkit.org/show_bug.cgi?id=20385">Bug 20385: Firebug command line extensions interfere with existing objects</a>.</p>
+<p>To test, execute "$()" in the Inspector's Console. Also trying setting $.</p>
